fix letter spacing fo paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@ body {
 .about-us__paragraph {
     font-size: 14px;
     line-height: 1.71;
+    letter-spacing: 0.03em;
     color: var(--color-silver);
 }
 
